# ChangeLog for x11-themes/gnustep-silvertheme
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gnustep-silvertheme-2.1 (21 Apr 2011)

  21 Apr 2011; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-silvertheme-2.1.ebuild, +metadata.xml:
  Initial version
