@@ -1,7 +1,7 @@
 >=gnustep-base/gnustep-make-2.0 virtual/gnustep-back
 >=gnustep-base/gnustep-make-2.0 virtual/gnustep-back debug? ( >=sys-devel/gdb-6.0 )
 0
-http://dev.gentoo.org/~voyageur/distfiles/Silver.theme-2.1.tar.bz2
+http://wiki.gnustep.org/images/6/6d/Silver.theme.tar.bz2
 
 http://wiki.gnustep.org/index.php/Themes
 as-is
