@@ -1,4 +1,4 @@
-media-libs/fontconfig >=x11-libs/libXft-2.1.0 x11-libs/libXt x11-libs/libXv gif? ( >=media-libs/giflib-4.1.0-r3 ) png? ( media-libs/libpng:0 ) jpeg? ( virtual/jpeg ) tiff? ( media-libs/tiff:0 ) xinerama? ( x11-libs/libXinerama ) xrandr? ( x11-libs/libXrandr ) || ( =sys-devel/automake-1.11* ) >=sys-devel/autoconf-2.61 sys-devel/libtool dev-vcs/git
+media-libs/fontconfig >=x11-libs/libXft-2.1.0 x11-libs/libXt x11-libs/libXv gif? ( >=media-libs/giflib-4.1.0-r3 ) png? ( media-libs/libpng:0 ) jpeg? ( virtual/jpeg ) tiff? ( media-libs/tiff:0 ) xinerama? ( x11-libs/libXinerama ) xrandr? ( x11-libs/libXrandr ) || ( =sys-devel/automake-1.11* ) >=sys-devel/autoconf-2.68 sys-devel/libtool dev-vcs/git
 media-libs/fontconfig >=x11-libs/libXft-2.1.0 x11-libs/libXt x11-libs/libXv gif? ( >=media-libs/giflib-4.1.0-r3 ) png? ( media-libs/libpng:0 ) jpeg? ( virtual/jpeg ) tiff? ( media-libs/tiff:0 ) xinerama? ( x11-libs/libXinerama ) xrandr? ( x11-libs/libXrandr ) nls? ( >=sys-devel/gettext-0.10.39 )
 0
 http://www.windowmaker.org/pub/source/release/WindowMaker-extra-0.1.tar.gz
