@@ -1,4 +1,4 @@
-DIST Silver.theme-2.1.tar.bz2 15580 RMD160 2b696c2048786b7c2ac16f8a10a8952738383f8e SHA1 d8959eb1edfd80158b94533d05e84c646795e046 SHA256 c9145a2125a4a971d3045fa824c9999360ef56753866b351f56a8267f693f030
-EBUILD gnustep-silvertheme-2.1.ebuild 750 RMD160 03edbf51df2bb0698751204e631116fb94071e86 SHA1 686c2ed369cc19642a22d0060052601a6537c318 SHA256 83fad9a56003a289dfab70ec8352cdcbb4939f96c6f4f7ea99e2bbd108a3bdbf
-MISC ChangeLog 295 RMD160 9a3f789c2302ef609dfed2e509bb37f3a1e87fd0 SHA1 0ca7d7cecbb1b23788c87cc596d641e0e02df8a8 SHA256 9e5314e77d0a4130812614b67a5c629b3830e6dec84a8480edbdce3674f4d18a
+DIST Silver.theme.tar.bz2 23784 RMD160 e0a660b1dac87c07000b3d83e96ed0e95170fdae SHA1 6776a807053f54e23ffe7add49beef214dc734ee SHA256 a8198fab37bbea2eda66ba25acc00e347a554dcb37f3f7bfbe63a2c3151999ab
+EBUILD gnustep-silvertheme-2.5.ebuild 680 RMD160 dbdd90c2d1e14561a0093da9319104bd1120f334 SHA1 f927e33a81732647f24fe55b7d46fd7f20e4995c SHA256 a1779d41757da9c4dfa8d9469dc940278e591ab2528882692edbdf46458e8a83
+MISC ChangeLog 474 RMD160 778f934d2f3ed4daefcfe9fe9528c3550efe3534 SHA1 f6cd3d7fbfc937e2ee3b8f98538fd3d657a78a81 SHA256 6e31f28a4bde0bd58627a9cd76110b1c1725adb2e596c597de0d7251471236ee
 MISC metadata.xml 224 RMD160 e967d5016854c34c51bfc1dbb4d0b447c9bf7191 SHA1 895a9ab39f67e13b14cba426260e6999af9dc0bc SHA256 60b236537d1343e72076e3aea95bc78cca0ca15d57f0993abcdc2ff2b04ad55c
