@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gnustep-silvertheme
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*gnustep-silvertheme-2.5 (15 Feb 2012)
+
+  15 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org>
+  -gnustep-silvertheme-2.1.ebuild, +gnustep-silvertheme-2.5.ebuild:
+  Version bump
 
 *gnustep-silvertheme-2.1 (21 Apr 2011)
 
